# monitor-v3

./: .gitignore  Cargo.toml
client-linux/: Cargo.toml
client-linux/src/: main.rs  process.rs
server/: Cargo.toml  data.json
server/src/: main.rs
server/templates/: data.html  header.html  no-data.html
src/: http.rs  lib.rs
