[package]
name = "monitor-linux"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor = { path = ".." }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.11", features = ["full", "macros"] }
serde_json = "1.0"
clap = "2.33"
os-release = "0.1.0"