[package]
name = "monitor-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11", features = ["full"] }
warp = "0.3"
monitor = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
serde_json = { version = "1.0" }